# ImageProcessor

./: .gitignore  CMakeLists.txt  imageprocessor.cpp  imageprocessor.h  main.cpp  showwidget.cpp
